# models/tipo_documento_programa.go
@@ -5,21 +5,22 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
-	"time"
 
 	"github.com/astaxie/beego/orm"
+	"github.com/udistrital/utils_oas/time_bogota"
 )
 
 type TipoDocumentoPrograma struct {
-	Id                int       `orm:"column(id);pk;auto"`
-	Nombre            string    `orm:"column(nombre)"`
-	Descripcion       string    `orm:"column(descripcion);null"`
-	CodigoAbreviacion string    `orm:"column(codigo_abreviacion);null"`
-	Activo            bool      `orm:"column(activo)"`
-	NumeroOrden       float64   `orm:"column(numero_orden);null"`
-	Tamano            float64   `orm:"column(tamano);null"`
-	Extension         string    `orm:"column(extension);null"`
-	FechaModificacion time.Time `orm:"column(fecha_modificacion);auto_now;type(timestamp with time zone)"`
+	Id                int     `orm:"column(id);pk;auto"`
+	Nombre            string  `orm:"column(nombre)"`
+	Descripcion       string  `orm:"column(descripcion);null"`
+	CodigoAbreviacion string  `orm:"column(codigo_abreviacion);null"`
+	Activo            bool    `orm:"column(activo)"`
+	NumeroOrden       float64 `orm:"column(numero_orden);null"`
+	Tamano            float64 `orm:"column(tamano);null"`
+	Extension         string  `orm:"column(extension);null"`
+	FechaCreacion     string  `orm:"column(fecha_creacion);null"`
+	FechaModificacion string  `orm:"column(fecha_modificacion);null"`
 }
 
 func (t *TipoDocumentoPrograma) TableName() string {
@@ -33,9 +34,8 @@ func init() {
 // AddTipoDocumentoPrograma insert a new TipoDocumentoPrograma into database and returns
 // last inserted Id on success.
 func AddTipoDocumentoPrograma(m *TipoDocumentoPrograma) (id int64, err error) {
-	var t time.Time
-	t = time.Now()
-	m.FechaModificacion = t.UTC()
+	m.FechaCreacion = time_bogota.TiempoBogotaFormato()
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
@@ -135,9 +135,7 @@ func GetAllTipoDocumentoPrograma(query map[string]string, fields []string, sortb
 func UpdateTipoDocumentoProgramaById(m *TipoDocumentoPrograma) (err error) {
 	o := orm.NewOrm()
 	v := TipoDocumentoPrograma{Id: m.Id}
-	var t time.Time
-	t = time.Now()
-	m.FechaModificacion = t.UTC()
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
